# mandelbrot_explorer_CUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_gpu copy/: CMakeCache.txt  Makefile  cmake_install.cmake
build_gpu copy/image/: image0.xcf
images/: test2.avi
include/: Shader.hpp  applyIterGPU.h
shaders/colormap-shaders-master/shaders/glsl/: DEFAULT.frag
src/: .Makefile.swp  .applyIter.h.swp  .main.cpp.swp  .mandelbrot.cpp.swp  .mandelbrot.h.swp  Makefile  Shader.cpp  Shader.hpp  applyIter.h  applyIterGPU.cu  applyIterGPU.h  compile.txt  main  main.cpp  make_animation.txt  mandelbrot.cpp  mandelbrot.fs  mandelbrot.h
src/include/: stb
src/include/multi_prec_cpu/: helper_fct.h
